--- a/Habitask/package.json
+++ b/Habitask/package.json
@@ -37,5 +37,8 @@
     "karma-jasmine-html-reporter": "~2.1.0",
     "tailwindcss": "^3.4.1",
     "typescript": "~5.3.2"
+  },
+  "engines": {
+    "node": ">=18.3"
   }
 }
